add citations for SLSN and CLU

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -81,3 +81,39 @@ archivePrefix = {arXiv},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...904...35P},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+@ARTICLE{Lunnan2020,
+       author = {{Lunnan}, R. and {Yan}, Lin and {Perley}, D.~A. and {Schulze}, S. and {Taggart}, K. and {Gal-Yam}, A. and {Fremling}, C. and {Soumagnac}, M.~T. and {Ofek}, E. and {Adams}, S.~M. and {Barbarino}, C. and {Bellm}, E.~C. and {De}, K. and {Fransson}, C. and {Frederick}, S. and {Golkhou}, V.~Z. and {Graham}, M.~J. and {Hallakoun}, N. and {Ho}, A.~Y.~Q. and {Kasliwal}, M.~M. and {Kaspi}, S. and {Kulkarni}, S.~R. and {Laher}, R.~R. and {Masci}, F.~J. and {Nu{\~n}ez}, F. Pozo and {Rusholme}, B. and {Quimby}, R.~M. and {Shupe}, D.~L. and {Sollerman}, J. and {Taddia}, F. and {Roestel}, J. van and {Yang}, Y. and {Yao}, Yuhan},
+        title = "{Four (Super)luminous Supernovae from the First Months of the ZTF Survey}",
+      journal = {The Astrophysical Journal},
+     keywords = {Supernovae, Surveys, Stellar mass loss, Magnetars, 1668, 1671, 1613, 992, Astrophysics - High Energy Astrophysical Phenomena},
+         year = 2020,
+        month = sep,
+       volume = {901},
+       number = {1},
+          eid = {61},
+        pages = {61},
+          doi = {10.3847/1538-4357/abaeec},
+archivePrefix = {arXiv},
+       eprint = {1910.02968},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...901...61L},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+@ARTICLE{De2020,
+       author = {{De}, Kishalay and {Kasliwal}, Mansi M. and {Tzanidakis}, Anastasios and {Fremling}, U. Christoffer and {Adams}, Scott and {Aloisi}, Robert and {Andreoni}, Igor and {Bagdasaryan}, Ashot and {Bellm}, Eric C. and {Bildsten}, Lars and {Cannella}, Christopher and {Cook}, David O. and {Delacroix}, Alexandre and {Drake}, Andrew and {Duev}, Dmitry and {Dugas}, Alison and {Frederick}, Sara and {Gal-Yam}, Avishay and {Goldstein}, Daniel and {Golkhou}, V. Zach and {Graham}, Matthew J. and {Hale}, David and {Hankins}, Matthew and {Helou}, George and {Ho}, Anna Y.~Q. and {Irani}, Ido and {Jencson}, Jacob E. and {Kaplan}, David L. and {Kaye}, Stephen and {Kulkarni}, S.~R. and {Kupfer}, Thomas and {Laher}, Russ R. and {Leadbeater}, Robin and {Lunnan}, Ragnhild and {Masci}, Frank J. and {Miller}, Adam A. and {Neill}, James D. and {Ofek}, Eran O. and {Perley}, Daniel A. and {Polin}, Abigail and {Prince}, Thomas A. and {Quataert}, Eliot and {Reiley}, Dan and {Riddle}, Reed L. and {Rusholme}, Ben and {Sharma}, Yashvi and {Shupe}, David L. and {Sollerman}, Jesper and {Tartaglia}, Leonardo and {Walters}, Richard and {Yan}, Lin and {Yao}, Yuhan},
+        title = "{The Zwicky Transient Facility Census of the Local Universe. I. Systematic Search for Calcium-rich Gap Transients Reveals Three Related Spectroscopic Subclasses}",
+      journal = {\apj},
+     keywords = {Supernovae, Compact objects, White dwarf stars, 1668, 288, 1799, Astrophysics - High Energy Astrophysical Phenomena, Astrophysics - Solar and Stellar Astrophysics},
+         year = 2020,
+        month = dec,
+       volume = {905},
+       number = {1},
+          eid = {58},
+        pages = {58},
+          doi = {10.3847/1538-4357/abb45c},
+archivePrefix = {arXiv},
+       eprint = {2004.09029},
+ primaryClass = {astro-ph.HE},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020ApJ...905...58D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
